# kv-parser

./: CMakeLists.txt  LICENSE  README.md
src/: KVparser.cpp  KVparser.h
